# data-sync-service

./: .env.example  .gitignore  AGENTS.md  DEMO.md  IMPLEMENTATION_PLAN.md  PROBLEM_STATEMENT.md  PROMPTS.md  README.md  alembic.ini  pyproject.toml  render.yaml
app/: main.py
app/api/: demo.py  health.py  metrics.py  schemas.py  sync.py
app/connectors/: __init__.py  base.py  errors.py  google_calendar_connector.py  hubspot_connector.py  mock_calendar.py  mock_crm.py  mock_payments.py  registry.py  stripe_connector.py
app/core/: config.py  database.py
app/models/: __init__.py  base.py  collected_status_allowlist.py  contact.py  event.py  external_record.py  source_connection.py  sync_run.py  sync_run_source.py  transaction.py
app/normalizers/: __init__.py  contact_normalizer.py  event_normalizer.py  status_mapper.py  transaction_normalizer.py
app/services/: metrics.py  repository.py  seed.py  sync_orchestrator.py
app/tests/: conftest.py  test_connectors.py  test_google_calendar_connector.py  test_hubspot_connector.py  test_metrics.py  test_normalizers.py  test_registry.py  test_repository.py  test_schema.py  test_stripe_connector.py  test_sync_api.py  test_sync_orchestrator.py
migrations/: env.py
migrations/versions/: 001_create_all_tables.py  002_seed_collected_status.py  003_seed_allowlist_idempotent.py
