[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-sync-service"
version = "0.1.0"
description = "Reliable data sync and revenue metrics correctness service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.13,<2.0",
    "httpx>=0.27,<1.0",
    "stripe>=10.0,<12.0",
    "hubspot-api-client>=9.0,<10.0",
    "google-api-python-client>=2.0,<3.0",
    "google-auth-httplib2>=0.1,<1.0",
    "google-auth-oauthlib>=1.0,<2.0",
    "setuptools>=68.0,<70",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "aiosqlite>=0.20,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests", "tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["S101", "S106", "S107"]
"tests/*" = ["S101", "S106", "S107"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
